--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,72 +1,103 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
 
-/*----------------------------------------------------Colours */
+/*--------------------------------------------Colors*/
 
-.bg-color-name-title{
-    background-color:#676767;
+.bg-color-name-title {
+    background-color: #676767;
 }
 
 .bg-color-three-reasons {
-    background-color: #fff;
+    background-color: #ffffff;
 }
 
-.bg-color-personal-info{
-    background-color:#f4f4f4;
+.bg-color-personal-info {
+    background-color: #f4f4f4;
 }
 
-.bg-color-work-history{
-    background-color:#9b59b6;
+.bg-color-skills {
+    background-color: #ffffff;
 }
 
-.bg-color-contact{
-    background-color:#fff;
-}
-
-.ui-menu-color-home{
-    background-color: #e67e22;
-}
-
-.ui-menu-color-resume{
+.bg-color-work-history {
     background-color: #9b59b6;
 }
 
-.ui-menu-color-contact{
+.bg-color-contact {
+    background-color: #ffffff;
+}
+
+.bg-color-conferences {
+    background-color: #f4f4f4;
+}
+
+.bg-color-groups {
+    background-color: #ffffff;
+}
+
+.ui-menu-color-home {
+    background-color: #e67e22;
+}
+
+.ui-menu-color-resume {
+    background-color: #9b59b6;
+}
+
+.ui-menu-color-contact {
     background-color: #3498db;
 }
 
-.ui-menu-color-download{
-    background-color: #525252;
+.ui-menu-color-download {
+    background-color: #d9a81d;
 }
 
-/*----------------------------------------------------Special paddings(margins/text */
 
-h1,h2,h3,h4 {
-    margin;0;
+.ui-menu-color-github {
+    background-color: #1c4a6c;
+}
+
+.ui-menu-color-interests {
+    background-color: #e74c3c;
+}
+
+
+
+
+body {
+    font-family: Roboto, sans-serif;
+    font-weight: 300;
+    background-color: #525252;
+    color: #555555;
+}
+
+
+/*--------------------------------------------Special Paddings/Margins/Text*/
+
+h1,
+h2,
+h3,
+h4 {
+    margin: 0;
 }
 
 .uppercase {
-    text-transform:uppercase;
+    text-transform: uppercase;
 }
 
-.general-sub{
+.general-sub {
     font-family: "Exo", sans-serif;
     font-weight: 300;
-    color:#fafafa;
+    color: #fafafa;
 }
 
-.inline-block{
-        display:inline-block;
+.inline-block {
+    display: inline-block;
 }
+
 
 .row-table {
     display: table;
 }
 
-.section-column {
-    display: table-cell;
-    padding: 0 30px 30px;
-    float: none;
-}
 .history-heading,
 .section-heading {
     font-family: "Exo", sans-serif;
@@ -75,74 +106,66 @@ h1,h2,h3,h4 {
     margin-bottom: 40px;
 }
 
-/*----------------------------------------------------Heading */
 
-header{
-    margin:0;
+/*--------------------------------------------Heading*/
+
+header {
+    margin: 0;
 }
 
 .heading {
-    margin-left:50px;
+    margin-left: 50px;
 }
 
-.logo{
-    background: url("/images/murray-bealby.jpeg");
-    background-position:center;
+.logo {
+    background: url("../images/rosie.jpg");
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 360px;
     transition: all .5s ease-in-out;
     -moz-transition: all .5s ease-in-out;
     -webkit-transition: all .5s ease-in-out;
-
 }
 
-.name{
-    font-family: "exo", sans-serif;
+.name {
+    font-family: "Exo", sans-serif;
     font-weight: 100;
     font-size: 46px;
-    margin-top:50px;
-    color: #fff;
+    margin-top: 50px;
+    color: #ffffff;
 }
 
-.title{
+.title {
     font-family: "Roboto", sans-serif;
     font-weight: 200;
-    font-size: 26px;
-    margin-top:20px;
-    margin-bottom:90px;
-    color: #fff;
+    font-size: 28px;
+    margin-top: 20px;
+    margin-bottom: 90px;
+    color: #ffffff;
 }
 
-.list-inline-item:not(:last-child){
-    margin:0;
-}
-
-.menucontainer{
-    font-size:0;
-}
-
-#nav{
-    margin:0;
+#nav {
+    margin: 0;
 }
 
 #nav li {
-    font-size:14px;
-    padding:0;
+    padding: 0;
 }
 
 .menuitem {
-    height:120px;
-    text-align:center;
-    padding:0;
+    height: 120px;
+    text-align: center;
+    padding: 0;
 }
 
 .menuitem a {
     width: 100%;
     text-decoration: none;
-    color: #fff;
+    color: #ffffff;
     height: 120px;
 }
+
 
 .menuitem a i {
     padding-top: 22px;
@@ -162,35 +185,37 @@ header{
     letter-spacing: 2px;
 }
 
-/*----------------------------------------------------Hover.css */
+
+/*--------------------------------------------Hover.css*/
 
 .hvr-sweep-to-bottom:before {
-    background-color: rgba(0,0,0,0.2);
-    height:120px;
+    background: rgba(0, 0, 0, 0.2);
+    height: 120px;
 }
 
-/*----------------------------------------------------Footer */
+
+/*--------------------------------------------Footer*/
 
 footer {
     background-color: #525252;
-    color:#fafafa;
-    min-height:120px;
-    margin:0;
+    color: #fafafa;
+    min-height: 120px;
+    margin: 0;
 }
 
-.cv-pdf i {
-    font-size: 18px;
+footer .cv-pdf i {
     color: #fafafa;
     text-align: center;
+    font-size: 18px;
     padding-left: 5px;
+}
+
+footer .cv-pdf i:hover {
+    color: #e84610;
     transition: all 0.35s ease-in-out;
     -moz-transition: all 0.35s ease-in-out;
     -webkit-transition: all 0.35s ease-in-out;
     -o-transition: all 0.35s ease-in-out;
-}
-
-.cv-pdf i:hover {
-    color: #e84610;
 }
 
 .social-links {
@@ -211,7 +236,6 @@ footer {
     -moz-transition: all 0.35s ease-in-out;
     -webkit-transition: all 0.35s ease-in-out;
     -o-transition: all 0.35s ease-in-out;
-    margin:2px;
 }
 
 .social-links li a i:hover {
@@ -219,10 +243,10 @@ footer {
 }
 
 #footer-details {
-    padding: 20px;
+    margin: 20px;
 }
 
-/*----------------------------------------------------Three Reasons  */
+/*--------------------------------------------Three Reasons*/
 
 .three-reasons-icon {
     font-size: 26px;
@@ -233,46 +257,47 @@ footer {
     margin-bottom: 15px;
 }
 
-/*----------------------------------------------------Personal Info  */
+/*--------------------------------------------Personal Info*/
 
 .personal-info-item {
-        margin-bottom: 20px;
-        display:block;
-        clear: both;
+    margin-bottom: 20px;
+    display: block;
+    clear: both;
 }
 
-.personal-info-item .key, .personal-info-item .value{
-    pading-right:8px;
+.personal-info-item .key,
+.personal-info-item .value {
+    padding-right: 8px;
+}
+
+.personal-info-item .key p,
+.personal-info-item .value p {
+    margin: 0;
+}
+
+.personal-info-item .key {
     display: inline-block;
+    width: 30%;
+    margin-right: 21px;
+    padding-top: 2px;
+    vertical-align: top;
 }
 
-.personal-info-item .key p, .personal-info-item .value p{
-    margin;0;
-}
-
-.personal-info-item .key{
-    width:30%;
-    margin-right:21px;
-    padding-top:2px;
-    vertical-align:top;
-}
-
-.personal-info-item .key p{
+.personal-info-item .key p {
     font-weight: 700;
 }
 
-.personal-info-item .value{
-    position:relative;   /*relative to it's predecessor (30%)*/
-    width:60%;
-
+.personal-info-item .value {
+    display: inline-block;
+    position: relative;
+    width: 60%;
 }
 
-/*----------------------------------------------------Skills  */
+/*--------------------------------------------Skills*/
 
 .progress {
     position: relative;
     height: 25px;
-    margin-bottom: 4px;
 }
 
 .progress-type {
@@ -284,17 +309,13 @@ footer {
     background-color: rgba(25, 25, 25, 0.2);
 }
 
+
 .progress-section {
-    margin:40px 20px;
+    margin: 40px 20px;
 }
 
-/*----------------------------------------------------Work History  */
 
-
-.history-heading{
-    color:#fafafa;
-    margin-bottom:50px;
-}
+/*--------------------------------------------Work History*/
 
 .timeline-item {
     padding: 4em 2em 0em 2em;
@@ -308,7 +329,7 @@ footer {
     margin: 0;
 }
 
-.timeline-item:before {
+.timeline-item::before {
     content: attr(data-dates);
     position: absolute;
     left: 2.5em;
@@ -316,12 +337,12 @@ footer {
     display: block;
     font-family: "Exo", sans-serif;
     font-weight: 500;
-    font-size: 0.8em;
+    font-size: .8em;
     padding: 0;
     margin: 0;
 }
 
-.timeline-item:after {
+.timeline-item::after {
     width: 12px;
     height: 12px;
     display: block;
@@ -330,44 +351,59 @@ footer {
     left: -6px;
     border-radius: 12px;
     content: '';
-    background:#fafafa;
+    background: #fafafa;
 }
 
-.history-items{
-    bottom-margin:30px;
+.history-heading {
+    color: #fafafa;
+    margin-bottom: 50px;
 }
 
-/*----------------------------------------------------Contact Form*/
+.history-items {
+    margin-bottom: 30px;
+}
+
+/*--------------------------------------------Contact*/
 
 .contact-heading {
-    font-family: "exo", sans-serif;
-    font-weight:300;
-    margin-top:25px;
-    margin-bottom:20px;
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 20px;
 }
 
-.center-form{
-    padding-top:10px;
+
+.center-form {
+    padding-top: 10px;
     margin: 0 auto;
-    max-width:70%;
+    max-width: 70%;
 }
 
-button[type="submit"]{
-    margin-top:15px;
-    margin-bottom:20px;
-    color:#fafafa;
-    background-color:#e84610;
+button[type="submit"] {
+    margin-top: 15px;
+    margin-bottom: 20px;
+    background-color: #e84610;
+    color: #fafafa;
 }
 
-/*----------------------------------------------------Media Query*/
+/*--------------------------------------------Map*/
+div#map {
+    min-height: 360px;
+}
 
-@media(min-width: 992px){
+/*--------------------------------------------Media Queries*/
+
+@media(min-width: 992px) {
+    .section-column {
+        padding: 0 30px 30px;
+        float: none;
+        display: table-cell;
+    }
+
     .center-form {
-        padding-top:30px;
-        min-height:240px;
+        padding-top: 30px;
+        min-height: 240px;
         margin: 0 auto;
-        max-width:50%;
+        max-width: 50%;
+    }
 }
-}
-
-   
